--- a/index.html
+++ b/index.html
@@ -34,100 +34,11 @@
     <div id="buttonContainer" class="mt-3 columnas container container-fluid"></div> 
     <div id="alertMessage" style="display: none;"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.4/xlsx.full.min.js"></script>
-    <script>
-        const formFileSm = document.getElementById('formFileSm');
-        const buttonContainer = document.getElementById('buttonContainer');
-        const alertMessage = document.getElementById('alertMessage');
-        let classCounter = 1;
-        let jsonData = [];
-        let originalData = []; // Guarda el contenido original
-
-        formFileSm.addEventListener('change', (e) => {
-            const file = e.target.files[0];
-            const reader = new FileReader();
-
-            reader.onload = (event) => {
-                const data = event.target.result;
-                const workbook = XLSX.read(data, { type: 'binary' });
-                const sheetName = workbook.SheetNames[0];
-                const sheet = workbook.Sheets[sheetName];
-                jsonData = XLSX.utils.sheet_to_json(sheet, { header: 1 });
-                originalData = jsonData.slice(); // Guarda una copia del contenido original
-                renderButtons();
-            };
-
-            reader.readAsBinaryString(file);
-        });
-
-        document.getElementById('reset').addEventListener('click', () => {
-            document.getElementById('searchBar').value = ''; // Limpia el campo de búsqueda
-            jsonData = originalData.slice(); // Restaura el contenido original
-            renderButtons();
-        });
-
-        function renderButtons() {
-            buttonContainer.innerHTML = '';
-            let rowContainer = null;
-
-            jsonData.forEach((row) => {
-                row.forEach((cellData) => {
-                    if (classCounter === 1) {
-                        rowContainer = document.createElement('div');
-                        rowContainer.classList.add('a-padre');
-                        rowContainer.classList.add('container');
-                        rowContainer.classList.add('mt-3');
-                        buttonContainer.appendChild(rowContainer);
-                    }
-
-                    const buttonCell = document.createElement('div');
-                    buttonCell.className = 'button-cell';
-                    buttonCell.innerHTML = `<span class="cell-data">${cellData || ''}</span>`;
-                    buttonCell.classList.add(`a${classCounter}`);
-                    buttonCell.classList.add('container');
-                    buttonCell.addEventListener('click', () => {
-                        const text = cellData || '';
-                        const textArea = document.createElement('textarea');
-                        textArea.value = text;
-                        document.body.appendChild(textArea);
-                        textArea.select();
-                        document.execCommand('copy');
-                        document.body.removeChild(textArea);
-                        showAlert('Texto copiado al portapapeles');
-                    });
-
-                    rowContainer.appendChild(buttonCell);
-                    classCounter = 3 - classCounter;
-                });
-            });
-        }
-
-        const searchBar = document.getElementById('searchBar');
-        searchBar.addEventListener('input', () => {
-            const searchValue = searchBar.value.toLowerCase();
-            const containers = document.querySelectorAll('.a-padre');
-
-            containers.forEach((container) => {
-                const hasMatch = Array.from(container.querySelectorAll('.a1')).some((element) => {
-                    return element.textContent.toLowerCase().includes(searchValue);
-                });
-
-                if (hasMatch) {
-                    container.style.display = 'block';
-                } else {
-                    container.style.display = 'none';
-                }
-            });
-        });
-
-        function showAlert(message) {
-            alertMessage.textContent = message;
-            alertMessage.style.display = 'block';
-
-            setTimeout(() => {
-                alertMessage.style.display = 'none';
-            }, 500);
-        }
-    </script>
+    <script src="js/reader.js"></script>
+    <script src="js/button.js"></script>
+    <script src="js/finder.js"></script>
+    <script src="js/resetButton.js"></script>
+    <script src="js/message.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
