--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- favicon -->
     <link rel="shortcut icon" href="images/favicon_krabby.ico" type="image/x-icon">
     <!-- GOOGLE FONTS  -->
@@ -16,8 +18,7 @@
 <body class="container-fluid container-xl contenedor">
     <nav class="navbar navbar-expand-lg navbar-light bg-light ">
         <div class="container-fluid">
-            <img src="images/blue.png" alt="Blue Express LOGO">
-            <a class="navbar-brand titulo" href="index.html">Scripts Contact Center</a>
+            <a class="navbar-brand titulo" href="index.html">Scripts</a>
             <form class="header">
                 <div id="searchBarContainer" class=" buscador">
                     <button type="reset" id="reset" class="btn btn-primary">Limpiar</button>
@@ -30,6 +31,7 @@
             </div>
         </div>
     </nav>
+    <p><a href="pages/instrucciones.html">Instrucciones de uso</a></p>
     <!-- DIV DINAMICO QUE RECIBE LA INFORMACION DEL .XLSX Y SE DIVIDE EN DOS COLUMNAS -->
     <div id="buttonContainer" class="mt-3 columnas container container-fluid"></div> 
     <div id="alertMessage" style="display: none;"></div>
