--- a/pages/instrucciones.html
+++ b/pages/instrucciones.html
@@ -80,7 +80,7 @@ y con la facilidad de poder copiar con un solo click todo el texto!.
 
 
 
-~COPIADOR~ ha sido desarrollado por Matias Lopez Valenzuela
+~COPIADOR~ ha sido desarrollado por Matias Lopez Valenzuela Agente Contact Center Crossborder
 
 Espero que se puedan beneficiar de este pequeña aplicacion web y sacarle todo su potencial
 por el momento se ha intentado dar la mayor responsividad posible para que se visualice de 
