--- a/pages/instrucciones.html
+++ b/pages/instrucciones.html
@@ -52,7 +52,7 @@
             y tambien para añadir nuevas funcionalidades y contenido util para la operacion de 
             atencion al cliente.</p>
 
-            <p class="text-center"><strong>~COPIADOR~</strong> ha sido desarrollado por Matias Lopez Valenzuela</p>
+            <p class="text-center"><strong>~COPIADOR~</strong> ha sido desarrollado por Matias Lopez V. Agente Contact Center Crossborder</p>
     </div>
 </body>
 </html>
