--- a/pages/instrucciones.html
+++ b/pages/instrucciones.html
@@ -52,7 +52,7 @@
             y tambien para añadir nuevas funcionalidades y contenido util para la operacion de 
             atencion al cliente.</p>
 
-            <p class="text-center"><strong>~COPIADOR~</strong> ha sido desarrollado por <bold>Matias Lopez V. Agente Contact Center Crossborder</bold></p>
+            <p class="text-center"><strong>~COPIADOR~</strong> ha sido desarrollado por <strong>Matias Lopez V. Agente Contact Center Crossborder</strong></p>
     </div>
 </body>
 </html>
